update layout and added contact/project sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="profile.jpg" alt="Cristian Vega" style="width:150px; border-radius:50%;">
     <h1>Cristian Vega</h1>
     <p>Frontend Web Developer | Veteran | Lifelong Learner</p>
   </header>
@@ -19,12 +20,21 @@
     <section>
       <h2>Projects</h2>
       <ul>
-        <li>Project 1 - Coming Soon</li>
+        <li>
+          <strong>Budget Tracker</strong> – Tracks expenses and income using local storage.<br />
+          <a href="#">Demo</a> | <a href="#">GitHub</a>
+        </li>
       </ul>
+    </section>
+    <section>
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:cr_vega23@outlook.com">cr_vega23@outlook.com</a></p>
+      <p>GitHub: <a href="https://github.com/VegaDesigns">VegaDesigns</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/cristian-vega-83a81914b/">Cristian Vega</a></p>
     </section>
   </main>
   <footer>
-    <p>Connect with me: <a href="https://github.com/VegaDesigns">GitHub</a> | <a href="https://www.linkedin.com/in/cristian-vega-83a81914b/">LinkedIn</a></p>
+    <p>© 2025 Cristian Vega. All rights reserved.</p>
   </footer>
 </body>
 </html>
