Added Budget Tracker project to portfolio

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
       <h2>Projects</h2>
       <ul>
         <li>
-          <strong>Budget Tracker</strong> – Tracks expenses and income using local storage.<br />
-          <a href="#">Demo</a> | <a href="#">GitHub</a>
+          <strong>Budget Tracker</strong> – A simple app to track income and expenses with localStorage support.<br />
+          <a href="https://vegadesigns.github.io/budget-tracker/" target="_blank">Live Demo</a> |
+          <a href="https://github.com/VegaDesigns/budget-tracker" target="_blank">GitHub Repo</a>
         </li>
+        
       </ul>
     </section>
     <section>
