Add tests and requirements

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <ul>
         <li>
           <strong>Budget Tracker</strong> – A simple app to track income and expenses with localStorage support.<br />
-          <a href="https://vegadesigns.github.io/budget-tracker/" target="_blank">Live Demo</a> |
-          <a href="https://github.com/VegaDesigns/budget-tracker" target="_blank">GitHub Repo</a>
+          <a href="https://vegadesigns.github.io/budget-tracker/" target="_blank" rel="noopener noreferrer">Live Demo</a> |
+          <a href="https://github.com/VegaDesigns/budget-tracker" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
         </li>
         
       </ul>
