--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><button id="theme-toggle" aria-label="Toggle dark mode">Toggle Theme</button></li>
+      <li><button id="theme-toggle" aria-label="Toggle dark mode">Dark Mode</button></li>
     </ul>
   </nav>
   <header>
@@ -56,7 +56,8 @@
   <script>
     const toggle = document.getElementById('theme-toggle');
     toggle.addEventListener('click', () => {
-      document.body.classList.toggle('dark-mode');
+      const dark = document.body.classList.toggle('dark-mode');
+      toggle.textContent = dark ? 'Light Mode' : 'Dark Mode';
     });
   </script>
 </body>
