--- a/index.html
+++ b/index.html
@@ -7,36 +7,59 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <nav aria-label="Main navigation">
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><button id="theme-toggle" aria-label="Toggle dark mode">Dark Mode</button></li>
+    </ul>
+  </nav>
   <header>
-    <img src="profile.jpg" alt="Cristian Vega" style="width:150px; border-radius:50%;">
+    <img src="profile.jpg" alt="Cristian Vega" class="profile-photo">
     <h1>Cristian Vega</h1>
     <p>Frontend Web Developer | Veteran | Lifelong Learner</p>
   </header>
   <main>
-    <section>
-      <h2>About Me</h2>
+    <section id="about">
+      <h2 class="section-title">About Me</h2>
       <p>I’m a U.S. Marine veteran turned web developer. Currently focused on frontend and full-stack projects using HTML, CSS, JavaScript, and React.</p>
     </section>
-    <section>
-      <h2>Projects</h2>
-      <ul>
-        <li>
-          <strong>Budget Tracker</strong> – A simple app to track income and expenses with localStorage support.<br />
-          <a href="https://vegadesigns.github.io/budget-tracker/" target="_blank" rel="noopener noreferrer">Live Demo</a> |
-          <a href="https://github.com/VegaDesigns/budget-tracker" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
-        </li>
-        
-      </ul>
+    <section id="projects">
+      <h2 class="section-title">Projects</h2>
+      <div class="projects">
+        <div class="project-card">
+          <strong>Budget Tracker</strong> – A simple app to track income and expenses with localStorage support.
+          <p><a href="https://vegadesigns.github.io/budget-tracker/" target="_blank" rel="noopener noreferrer">Live Demo</a> |
+          <a href="https://github.com/VegaDesigns/budget-tracker" target="_blank" rel="noopener noreferrer">GitHub Repo</a></p>
+        </div>
+      </div>
     </section>
-    <section>
-      <h2>Contact Me</h2>
+    <section id="contact">
+      <h2 class="section-title">Contact Me</h2>
       <p>Email: <a href="mailto:cr_vega23@outlook.com">cr_vega23@outlook.com</a></p>
-      <p>GitHub: <a href="https://github.com/VegaDesigns">VegaDesigns</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/cristian-vega-83a81914b/">Cristian Vega</a></p>
+      <p><a href="https://github.com/VegaDesigns" class="icon-link" aria-label="GitHub">
+        <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true" focusable="false">
+          <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.01.08-2.11 0 0 .67-.21 2.2.82a7.6 7.6 0 012.01-.27c.68 0 1.36.09 2.01.27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.91.08 2.11.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
+        </svg>
+        <span>VegaDesigns</span></a></p>
+      <p><a href="https://www.linkedin.com/in/cristian-vega-83a81914b/" class="icon-link" aria-label="LinkedIn">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false">
+          <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.784-1.75-1.75s.784-1.75 1.75-1.75 1.75.784 1.75 1.75-.784 1.75-1.75 1.75zm13.5 11.268h-3v-5.604c0-3.368-4-3.112-4 0v5.604h-3v-10h3v1.354c1.396-2.586 7-2.777 7 2.476v6.17z"/>
+        </svg>
+        <span>Cristian Vega</span></a></p>
     </section>
   </main>
   <footer>
     <p>© 2025 Cristian Vega. All rights reserved.</p>
   </footer>
+  <script>
+    const toggle = document.getElementById('theme-toggle');
+    toggle.addEventListener('click', () => {
+      const dark = document.body.classList.toggle('dark-mode');
+      toggle.textContent = dark ? 'Light Mode' : 'Dark Mode';
+      toggle.setAttribute('aria-label', dark ? 'Switch to light mode' : 'Switch to dark mode');
+    });
+  </script>
 </body>
 </html>
